Fix regression in background tab color (Mac).

When merging my Material Design changes for the Mac tab strip I mis-
merged this one important change, part of the fix for the regression
in crbug.com/585867.

BUG=591057

Review URL: https://codereview.chromium.org/1756643002

Cr-Commit-Position: refs/heads/master@{#378768}

Former-commit-id: 1ce82ea96b06b419a7c82090cd4c561d6bb11da4